# WaifuCop

./: .gitignore  CLAUDE.md  INSTRUCTIONS.md  README.md  TODO.md  aw_probe.py  debug.txt  llama_query.py  main.py  pyproject.toml  run_popup.bat  runner.py  task_log.txt  waifu_popup.py  waifucops.yaml
.claude/: settings.local.json
.claude/commands/: commit-push.md  new-branch.md
misc/: TODO.md  discord-integration.md  response.md
scripts/: aw_probe.py  discord_notifier.py  llama_query.py  runner.py  waifu_popup.py
spec/: OVERVIEW.md  activity-tracking.md  waifu-meter.md
specs/: data-persistence.md  llm-integration.md  personas.md  popup-ui.md  system-overview.md
